# personalsite

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  dockerfile  genindex.html  index.html  license.html  noxfile.py  objects.inv  personalsite.sublime-project  personalsite.sublime-workspace  py-modindex.html  pyproject.toml  reference.html  run.py  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  license.doctree  reference.doctree
.ipynb_checkpoints/: markdown test-checkpoint.ipynb
articles/: 2015-07-02_professional_when-to-automate_automation-text-analysis.md  2017-12-21_professional_effective-remote-working_communication-remote-travel.md  2018-02-12_professional_tools-that-deceive-us_excel-data-q.md  2018-05-05_personal_organising-digital-media-using-python_organising-python-petprojects.md  2018-08-11_personal_video-carry-on-only-travel_travel-video-petprojects.md  2018-09-12_personal_some-tips-for-success-in-omscs_study-lifestyle-organising.md  2018-11-30_professional_natural-language-processing-review-2018_analysis-nlp-text-data-chatbots-lstm-tensorflow-gensim.md  2019-01-10_professional_an-overview-of-machine-learning-concepts_python-data-analysis.md  2019-07-04_personal_guide-to-a-long-weekend-in-hobart_travel-australia.md  2020-01-12_personal_big-list-of-things-to-do-nyc_travel-usa-organising.md  2020-05-27_professional_an-updated-reading-list_study-career.md  2020-07-07_personal_programming-and-analytics-in-games_study-games-petprojects-analysis.md  2020-07-07_professional_increasing-software-development-expertise_study-career.md  2020-07-08_personal_wow-auctions-development-status_study-petprojects-games-analysis.md  2021-07-04_personal_best-of-portland_travel-usa-organising.md  2021-08-22_professional_python-project-cookie-cutter_python-study-career.md  2022-11-12_personal_my-rules-for-airline-booking_travel.md  2022-12-05_personal_tipping-in-the-us_travel-usa.md  2023-04-30_professional_ chatgpt-part1-why-i-am-interested-in-making-llm-applications_projects-text-chatbot-career.md  2023-04-30_professional_chatGPTpart1_projects-text-chatbot-career.md  2023-09-02_personal_video-crispy-skin-salmon-in-ten-minutes_cooking-video.md
docs/: conf.py  index.rst  reference.rst  tools.rst
env/: requirements_conda.txt  requirements_noconda.txt
environment/: requirements_conda.txt  requirements_noconda.txt
local/: 2015-07-03_professional_a-new-programmers-reading-list_study-career.md  2015-07-04_professional_apache-spark-course-reflections_analysis-spark.md  2015-07-19_professional_automatic-coding-of-text-data_text-analysis.md  2015-08-08_professional_categorizing-text-data-planning_text-analysis.md  2017-12-21_professional_effective-remote-working_.md  2017-12-21_professional_effective-remote-working_communication-remote-travel.md  2018-01-25_professional_data-service-productisation_building.md  2018-01-25_professional_data-service-productisation_business-research-career.md  2018-02-12_professional_tools-that-deceive-us_.md  2018-02-12_professional_tools-that-deceive-us_excel-data-q.md  2018-03-26_professional_driver-analysis-demystified_analysis-drivers-modelling-randomforest.md  2018-05-05_personal_organising-digital-media-using-python_organising-python-personalprojects.md  2018-05-10_personal_reflections-on-six-months-in-japan_travel-remote-japan.md  2018-05-10_personal_reflections-on-six-months-in-japan_travel-remote-lifestyle.md  2018-05-30_professional_marketing-segmentation-approaches_analysis-segmentation-consulting.md  2018-08-11_personal_video-carry-on-only-travel_lifestyle-travel-video.md  2018-08-11_personal_video-carry-on-only-travel_travel-video-petprojects.md  2018-08-29_professional_vlog-explaining-weighting_analysis-weighting-consulting-video.md  2018-09-12_personal_some-tips-for-success-in-omscs_study-lifestyle-organisation.md  2018-10-03_professional_user-focused-analysis-and-design_design-consulting-research.md  2018-11-08_personal_my-digital-nomad-packing-list_travel-gear-lifestyle-digitalnomad-petprojects.md  2018-11-08_personal_my-digital-nomad-packing_list_travel-gear-lifestyle-digitalnomad-packing.md  2018-11-08_personal_my-travel-kit_.md  2018-11-08_personal_my-travel-kit_travel-gear-lifestyle.md  2018-11-30_professional_natural-language-processing-review-2018_analysis-nlp-text-data-chatbots-lstm-tensorflow-gensim.md  2018-12-06_professional_chatbots-for-market-research_analysis-chatbots-nlp.md  2018-12-25_personal_video-our-europe-trip_lifestyle-travel-video-remote.md  2019-01-05_personal_guide-to-koyasan-japan_travel-japan.md  2019-01-06_personal_guide-to-split-croatia_travel-croatia.md  (+28 more)
tests/: test_utils.py
(+29 files in other folders)
